Truncate long song names in SoundCloud card, fixes #407.

--- a/src/sources/soundcloud/Player.css
+++ b/src/sources/soundcloud/Player.css
@@ -18,6 +18,7 @@
   }
 
   &-info {
+    display: flex;
     margin-bottom: var(--sc-margins);
   }
 
@@ -26,7 +27,10 @@
     width: 100px;
     height: 100px;
     margin-right: var(--sc-margins);
-    float: left;
+  }
+
+  &-links {
+    width: calc(100% - 100px - var(--sc-margins));
   }
 
   &-permalink {
