--- a/src/sources/soundcloud/SongInfo.css
+++ b/src/sources/soundcloud/SongInfo.css
@@ -6,6 +6,10 @@
     color: var(--text-color);
     display: block;
     height: 25px;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+
     &--track {
       font-weight: bold;
     }
